@@ -6,10 +6,13 @@ package edu.tigers.sumatra.ai.metis.offense;
 
 import com.github.g3force.configurable.Configurable;
 import edu.tigers.sumatra.ai.metis.ACalculator;
+import edu.tigers.sumatra.ai.metis.ballinterception.RatedBallInterception;
 import edu.tigers.sumatra.ai.metis.ballresponsibility.EBallResponsibility;
 import edu.tigers.sumatra.ai.metis.botdistance.BotDistance;
-import edu.tigers.sumatra.ai.metis.offense.ballinterception.RatedBallInterception;
 import edu.tigers.sumatra.ids.BotID;
+import edu.tigers.sumatra.math.AngleMath;
+import edu.tigers.sumatra.math.Hysteresis;
+import edu.tigers.sumatra.math.vector.IVector2;
 import edu.tigers.sumatra.pathfinder.TrajectoryGenerator;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
@@ -30,25 +33,28 @@ import java.util.function.Supplier;
 @RequiredArgsConstructor
 public class BallHandlingBotCalc extends ACalculator
 {
-	@Configurable(defValue = "0.3", comment = "Max abs diff of slack times for adding a second bot")
-	private static double maxSlackTimeDiffForSecondBot = 0.3;
+	@Configurable(defValue = "0.3", comment = "Time in seconds to subtract from current max traj time")
+	private static double hystTimeOffsetForNonMovingBall = 0.3;
 
-	@Configurable(defValue = "0.1", comment = "Time in seconds to subtract from current max traj time")
-	private static double hystTimeOffsetForNonMovingBall = 0.1;
+	@Configurable(defValue = "0.3", comment = "Time in seconds to subtract from current earliest ball time")
+	private static double hystTimeOffsetForMovingBall = 0.3;
 
-	@Configurable(defValue = "300.0", comment = "Min distance between interceptions positions for adding a second bot")
-	private static double minDistForSecondBot = 300.0;
+	@Configurable(defValue = "0.5", comment = "[m/s]")
+	private static double estimatedApproachAndStopBallCatchUpSpeed = 0.5;
+
+	@Configurable(defValue = "0.2", comment = "[s]")
+	private static double approachAndStopBallTimePenalty = 0.2;
 
 	@Configurable(defValue = "1", comment = "Number of bots to assign when there are no ball interceptions")
 	private static int numBotsForNonInterceptableBall = 1;
-
-	@Configurable(defValue = "true")
-	private static boolean allowDoubleAttackerForBallInterception = true;
 
 	private final Supplier<EBallResponsibility> ballResponsibility;
 	private final Supplier<Set<BotID>> potentialOffensiveBots;
 	private final Supplier<Map<BotID, RatedBallInterception>> ballInterceptions;
 	private final Supplier<List<BotDistance>> tigersToBallDist;
+
+	private Hysteresis ballSpeedHysteresis = new Hysteresis(OffensiveConstants.getAbortBallInterceptionVelThreshold(),
+			OffensiveConstants.getBallIsRollingThreshold());
 
 	@Getter
 	private List<BotID> ballHandlingBots;
@@ -77,13 +83,44 @@ public class BallHandlingBotCalc extends ACalculator
 
 	private List<BotID> findBestPrimaries()
 	{
+		ballSpeedHysteresis.update(getBall().getVel().getLength());
 		if (getAiFrame().getGameState().isStoppedGame())
 		{
 			return getPrimariesDuringStop();
 		}
 
-		if (!ballInterceptions.get().isEmpty())
+		if (!ballInterceptions.get().isEmpty() && ballSpeedHysteresis.isUpper())
 		{
+			// in this case a interception exists. However in some cases we rather want to activate another bot that
+			// can use approach and stop ball.
+			var fastestRobotThatCanReachCurrentBallLocation = potentialOffensiveBots.get().stream()
+					.filter(bot -> ballMovesAwayFromBot(getWFrame().getBot(bot).getPos()))
+					.min(Comparator.comparingDouble(
+							bot -> TrajectoryGenerator.generatePositionTrajectory(getWFrame().getBot(bot), getBall().getPos())
+									.getTotalTime()))
+					.map(bot -> getWFrame().getBot(bot));
+
+			if (fastestRobotThatCanReachCurrentBallLocation.isPresent() && getBall().getVel().getLength() < 2.0)
+			{
+				var bot = fastestRobotThatCanReachCurrentBallLocation.get();
+				double distance = bot.getPos().distanceTo(getBall().getPos());
+
+				// we assume we can catch up to the ball with 0.5m/s
+				double timeToCatchUp = distance / estimatedApproachAndStopBallCatchUpSpeed + approachAndStopBallTimePenalty;
+
+				var interceptions = findFastestInterceptableInterceptions(ballInterceptions.get());
+				if (!interceptions.isEmpty())
+				{
+					var fastestInterception = interceptions.getFirst();
+					if (fastestInterception.getBallInterception().getBallContactTime() > timeToCatchUp)
+					{
+						// approachAndStopBall could be faster than the fastest interception
+						return List.of(fastestRobotThatCanReachCurrentBallLocation.get().getBotId());
+					}
+				}
+
+			}
+
 			return findBestPrimariesByInterception(ballInterceptions.get());
 		}
 
@@ -129,13 +166,13 @@ public class BallHandlingBotCalc extends ACalculator
 		{
 			var bot = getWFrame().getBot(botId);
 			var trajectoryTime = TrajectoryGenerator.generatePositionTrajectory(bot, getBall().getPos()).getTotalTime();
-			if (bot.hasBallContact())
+			if (bot.getBallContact().hadRecentContact())
 			{
 				trajectoryTime = 0;
 			}
 
 			// Hyst
-			if (!ballHandlingBots.isEmpty() && ballHandlingBots.get(0).equals(botId))
+			if (!ballHandlingBots.isEmpty() && ballHandlingBots.getFirst().equals(botId))
 			{
 				trajectoryTime = Math.max(0, trajectoryTime - hystTimeOffsetForNonMovingBall);
 			}
@@ -154,19 +191,10 @@ public class BallHandlingBotCalc extends ACalculator
 			return Collections.emptyList();
 		}
 
-		var firstBot = interceptions.get(0).getBallInterception().getBotID();
+		var firstBot = interceptions.getFirst().getBallInterception().getBotID();
 		if (!getAiFrame().getGameState().isRunning() || interceptions.size() < 2)
 		{
 			return List.of(firstBot);
-		}
-
-		if (allowDoubleAttackerForBallInterception)
-		{
-			var secondBot = interceptions.get(1).getBallInterception().getBotID();
-			if (isAddingSecondPrimaryReasonable(firstBot, secondBot, ballInterceptions))
-			{
-				return List.of(firstBot, secondBot);
-			}
 		}
 
 		return List.of(firstBot);
@@ -179,25 +207,39 @@ public class BallHandlingBotCalc extends ACalculator
 		return interceptions
 				.values()
 				.stream()
-				.sorted(Comparator.comparing(e -> e.getBallInterception().getBallContactTime()))
+				.sorted(Comparator.comparing(this::getBallContactTimeWithHyst))
 				.toList();
 	}
 
 
-	private boolean isAddingSecondPrimaryReasonable(BotID bestPrimary, BotID secondBestPrimary,
-			Map<BotID, RatedBallInterception> ballInterceptions)
+	private double getBallContactTimeWithHyst(RatedBallInterception ballInterception)
 	{
-		var bestBotBallInterception = ballInterceptions.get(bestPrimary);
-		var secondBestBotBallInterception = ballInterceptions.get(secondBestPrimary);
+		var filteredInterceptionsFromlastFrame = getAiFrame().getPrevFrame().getTacticalField()
+				.getBallInterceptions()
+				.values()
+				.stream()
+				.sorted(Comparator.comparing(i -> i.getBallInterception().getBallContactTime()))
+				.filter(i -> !Double.isInfinite(i.getBallInterception().getBallContactTime()))
+				.limit(2)
+				.toList();
 
-		var bestBotPos = bestBotBallInterception.getBallInterception().getPos();
-		var secondBestBotPos = secondBestBotBallInterception.getBallInterception().getPos();
+		if (filteredInterceptionsFromlastFrame
+				.stream()
+				.filter(e -> ballHandlingBots.contains(e.getBallInterception().getBotID()))
+				.map(i -> i.getBallInterception().getBotID()).toList()
+				.contains(ballInterception.getBallInterception().getBotID()))
+		{
+			return Math.max(0, ballInterception.getBallInterception().getBallContactTime() - hystTimeOffsetForMovingBall);
+		}
+		return ballInterception.getBallInterception().getBallContactTime();
+	}
 
-		// negative slack time means that robot reaches the intercept pos before the ball
-		var firstPrimarySlackTime = bestBotBallInterception.getBallInterception().getBallContactTime();
-		var secondPrimarySlackTime = secondBestBotBallInterception.getBallInterception().getBallContactTime();
 
-		return Math.abs(firstPrimarySlackTime - secondPrimarySlackTime) < maxSlackTimeDiffForSecondBot
-				&& bestBotPos.distanceTo(secondBestBotPos) > minDistForSecondBot;
+	private boolean ballMovesAwayFromBot(IVector2 botPos)
+	{
+		var ballDir = getBall().getVel();
+		var botToBallDir = getBall().getPos().subtractNew(botPos);
+		var angle = ballDir.angleToAbs(botToBallDir).orElse(0.0);
+		return angle < AngleMath.deg2rad(45);
 	}
 }
