@@ -4,9 +4,13 @@
 
 package edu.tigers.sumatra.ai.metis.offense.dribble;
 
-
+import com.github.g3force.configurable.ConfigRegistration;
+import com.github.g3force.configurable.Configurable;
 import edu.tigers.sumatra.ai.metis.ACalculator;
 import edu.tigers.sumatra.ai.metis.EAiShapesLayer;
+import edu.tigers.sumatra.ai.metis.kicking.EBallReceiveMode;
+import edu.tigers.sumatra.ai.metis.kicking.KickFactory;
+import edu.tigers.sumatra.ai.metis.kicking.Pass;
 import edu.tigers.sumatra.drawable.DrawableAnnotation;
 import edu.tigers.sumatra.drawable.DrawableArrow;
 import edu.tigers.sumatra.drawable.DrawableCircle;
@@ -22,9 +26,11 @@ import edu.tigers.sumatra.math.quadrilateral.Quadrilateral;
 import edu.tigers.sumatra.math.vector.IVector2;
 import edu.tigers.sumatra.math.vector.ValuePoint;
 import edu.tigers.sumatra.math.vector.Vector2;
+import edu.tigers.sumatra.pathfinder.TrajectoryGenerator;
 import edu.tigers.sumatra.wp.data.ITrackedBot;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.math3.util.Pair;
 
 import java.awt.Color;
 import java.util.ArrayList;
@@ -40,11 +46,33 @@ import java.util.function.Supplier;
 @RequiredArgsConstructor
 public class BallDribbleToPosCalc extends ACalculator
 {
+	@Configurable(comment = "[mm] No opponent closer than this to the ball -> it is not dangerous", defValue = "1800.0")
+	private static double opponentIsCloseDistance = 1800.0;
+
+	@Configurable(comment = "[mm] protectKick target distance", defValue = "600.0")
+	private static double protectKickTargetDistance = 600.0;
+
+	@Configurable(comment = "[s] needed time to reach protect kick target", defValue = "1.2")
+	private static double timeToReachProtectKickTarget = 1.2;
+
+	@Configurable(comment = "number of protect kick target samples per half", defValue = "5")
+	private static int numOfProtectKickSamplesPerHalf = 5;
+
+	static
+	{
+		ConfigRegistration.registerClass("metis", BallDribbleToPosCalc.class);
+	}
+
+	private final KickFactory kickFactory = new KickFactory();
+
 	private final Supplier<List<BotID>> ballHandlingBots;
 	private final Supplier<DribblingInformation> dribblingInformation;
 
 	@Getter
 	private DribbleToPos dribbleToPos;
+
+	@Getter
+	private Pass protectPass;
 
 
 	@Override
@@ -52,7 +80,7 @@ public class BallDribbleToPosCalc extends ACalculator
 	{
 		if (!ballHandlingBots.get().isEmpty())
 		{
-			dribbleToPos = getDribbleToPos(getWFrame().getTiger(ballHandlingBots.get().get(0)));
+			dribbleToPos = getDribbleToPos(getWFrame().getTiger(ballHandlingBots.get().getFirst()));
 		} else
 		{
 			// there is no ball handling robot, so this has no effect
@@ -78,18 +106,26 @@ public class BallDribbleToPosCalc extends ACalculator
 		var opponents = getWFrame().getOpponentBots().values().stream()
 				.filter(e -> dribbleCircle.withMargin(500).isPointInShape(e.getPos())).toList();
 
-		List<IQuadrilateral> blockingQuads = getBlockingQuads(tigerBot, dribbleCircle, opponents);
+		protectPass = calculatePotentialProtectPass();
+		if (protectPass != null)
+		{
+			getShapesProtectKick().add(
+					new DrawableArrow(getBall().getPos(), protectPass.getKick().getTarget().subtractNew(getBall().getPos()),
+							new Color(207, 24, 255, 237)));
+		}
 
-		// calculate moveTo destination
-		var line = Lines.segmentFromPoints(tigerBot.getPos(), dribblingInformation.get().getStartPos());
-		boolean isBlocked = blockingQuads.stream().map(e -> e.intersectPerimeterPath(line)).anyMatch(e -> !e.isEmpty());
-		getShapes().add(
-				new DrawableAnnotation(dribblingInformation.get().getStartPos(), isBlocked ? "is blocked" : "not blocked"));
+		List<IQuadrilateral> blockingQuads = getBlockingQuads(tigerBot, dribbleCircle, opponents);
 
 		List<ValuePoint> ratedPoints = getRatedPoints(dribbleCircle, blockingQuads);
 		var bestPoint = ratedPoints.stream().max(Comparator.comparingDouble(ValuePoint::getValue));
 		if (bestPoint.isPresent())
 		{
+			var line = Lines.segmentFromPoints(tigerBot.getPos(), bestPoint.get());
+			boolean isBlocked = blockingQuads.stream().map(e -> e.intersectPerimeterPath(line))
+					.anyMatch(e -> !e.isEmpty());
+
+			getShapes().add(new DrawableAnnotation(dribblingInformation.get().getStartPos(),
+					isBlocked ? "is blocked" : "not blocked"));
 			getShapes().add(
 					new DrawableCircle(Circle.createCircle(bestPoint.get(), 30)).setFill(true).setColor(Color.cyan));
 			getShapes().add(
@@ -101,29 +137,116 @@ public class BallDribbleToPosCalc extends ACalculator
 			}
 		}
 
+		if (dribbleToDestination == null)
+		{
+			// fallback position, stay at closest point
+			dribbleToDestination = ratedPoints.stream()
+					.min(Comparator.comparingDouble(point -> point.distanceTo(tigerBot.getPos()))).map(IVector2.class::cast)
+					.orElse(null);
+		}
+
 		// calculate protectFrom
-		var weightedOpponents = opponents.stream()
-				.map(e -> new ValuePoint(e.getBotKickerPos(),
-						Math.max(0, 1 - e.getBotKickerPos().distanceTo(tigerBot.getPos()) / 2000)))
-				.filter(e -> e.getValue() < dribbleCircle.radius())
-				.toList();
+		var weightedOpponents = opponents.stream().map(e -> new ValuePoint(e.getBotKickerPos(),
+						Math.max(0, 1 - e.getBotKickerPos().distanceTo(tigerBot.getPos()) / opponentIsCloseDistance)))
+				.filter(e -> e.getValue() < dribbleCircle.radius()).toList();
 
 		IVector2 protectTarget = calcProtectTarget(tigerBot, weightedOpponents);
 		return new DribbleToPos(protectTarget, dribbleToDestination, condition, null);
 	}
 
 
-	private IVector2 calcProtectTarget(ITrackedBot tigerBot,
-			List<ValuePoint> weightedOpponents)
+	private Pass calculatePotentialProtectPass()
+	{
+		if (ballHandlingBots.get().isEmpty())
+		{
+			return null;
+		}
+
+		List<Pass> consideredPasses = new ArrayList<>();
+		for (int i = -numOfProtectKickSamplesPerHalf; i < numOfProtectKickSamplesPerHalf; i++)
+		{
+			IVector2 opponentGoalFront = Vector2.fromXY(Geometry.getFieldLength() / 2.0,
+							(Geometry.getFieldWidth() / 2.0 / numOfProtectKickSamplesPerHalf) * i)
+					.addNew(Vector2.fromX(-Geometry.getPenaltyAreaTheir().getRectangle().xExtent() * 1.25));
+			IVector2 ballToOpponentGoalFront = opponentGoalFront.subtractNew(getBall().getPos());
+			IVector2 kickTarget = getBall().getPos().addNew(ballToOpponentGoalFront.scaleToNew(protectKickTargetDistance));
+			getPassForKickTarget(kickTarget, opponentGoalFront).ifPresent(consideredPasses::add);
+		}
+		return consideredPasses.stream().max(Comparator.comparingDouble(Pass::getPreparationTime)).orElse(null);
+	}
+
+
+	private Optional<Pass> getPassForKickTarget(IVector2 kickTarget, IVector2 kickTargetSource)
+	{
+		var closeOpponent = getWFrame().getOpponentBots().values().stream()
+				.filter(bot -> getWFrame().getBall().getPos().distanceTo(bot.getPos()) < 5000)
+				.map(bot -> new Pair<>(bot.getBotId(),
+						TrajectoryGenerator.generatePositionTrajectory(bot, kickTarget).getTotalTime()))
+				.min(Comparator.comparingDouble(Pair::getValue));
+
+		boolean reachingProtectKickBeforeOpponent;
+		double minOpponentTime = Double.MAX_VALUE;
+		if (closeOpponent.isPresent())
+		{
+			minOpponentTime = closeOpponent.get().getValue();
+			reachingProtectKickBeforeOpponent = minOpponentTime > timeToReachProtectKickTarget;
+		} else
+		{
+			reachingProtectKickBeforeOpponent = true;
+		}
+
+		var ballToKickTarget = kickTarget.subtractNew(getBall().getPos());
+		var kickTargetSide1 = kickTarget.addNew(ballToKickTarget.getNormalVector().scaleToNew(250));
+		var kickTargetSide2 = kickTarget.addNew(ballToKickTarget.getNormalVector().scaleToNew(-250));
+		var pathQuadliteral = Quadrilateral.fromCorners(
+				kickTargetSide1.subtractNew(ballToKickTarget).addNew(ballToKickTarget.getNormalVector().scaleToNew(-120)),
+				kickTargetSide2.subtractNew(ballToKickTarget).addNew(ballToKickTarget.getNormalVector().scaleToNew(120)),
+				kickTargetSide1.addNew(ballToKickTarget.scaleToNew(Geometry.getBotRadius() * 2)),
+				kickTargetSide2.addNew(ballToKickTarget.scaleToNew(Geometry.getBotRadius() * 2)));
+
+		boolean protectPathFree = getWFrame().getOpponentBots().values().stream()
+				.filter(bot -> kickTarget.distanceTo(bot.getPos()) < 3000)
+				.filter(bot -> pathQuadliteral.isPointInShape(bot.getPos())).findAny().isEmpty();
+
+		if (reachingProtectKickBeforeOpponent
+				&& protectPathFree
+				&& Geometry.getField().withMargin(-400).isPointInShape(kickTarget)
+				&& !Geometry.getPenaltyAreaTheir().getRectangle().withMargin(Geometry.getBotRadius() * 2).isPointInShape(
+				kickTarget)
+				&& kickTargetSource.distanceTo(getBall().getPos()) > protectKickTargetDistance * 1.25)
+		{
+			if (minOpponentTime < Double.MAX_VALUE)
+			{
+				getShapesProtectKick().add(
+						new DrawableAnnotation(kickTarget, "time: " + String.format("%1.2f", minOpponentTime), Color.CYAN));
+			}
+
+			getShapesProtectKick().add(
+					new DrawableArrow(getBall().getPos(), kickTarget.subtractNew(getBall().getPos()),
+							new Color(47, 104, 255, 137)));
+
+			kickFactory.setAimingTolerance(0.6);
+			kickFactory.update(getWFrame());
+			var kick = kickFactory.chip(getBall().getPos(), kickTarget, 1.7);
+			return Optional.of(
+					new Pass(kick, BotID.noBot(), ballHandlingBots.get().getFirst(), 0, 0, minOpponentTime,
+							EBallReceiveMode.DONT_CARE));
+		}
+
+		return Optional.empty();
+	}
+
+
+	private IVector2 calcProtectTarget(ITrackedBot tigerBot, List<ValuePoint> weightedOpponents)
 	{
 		IVector2 protectFrom = Vector2.zero();
 		for (var wO : weightedOpponents)
 		{
-			protectFrom = protectFrom.addNew(wO.subtractNew(tigerBot.getPos()).multiplyNew(wO.getValue()));
+			protectFrom = protectFrom.addNew(
+					wO.subtractNew(tigerBot.getPos()).scaleToNew(Geometry.getBotRadius() * 2 * wO.getValue()));
 		}
-		IVector2 fallbackTarget = dribblingInformation.get().getStartPos()
-				.addNew(Geometry.getGoalOur().getCenter().subtractNew(dribblingInformation.get()
-						.getStartPos()).multiplyNew(-1));
+		IVector2 fallbackTarget = dribblingInformation.get().getStartPos().addNew(
+				Geometry.getGoalOur().getCenter().subtractNew(dribblingInformation.get().getStartPos()).multiplyNew(-1));
 		IVector2 protectTarget = protectFrom.isZeroVector() ? fallbackTarget : tigerBot.getPos().addNew(protectFrom);
 
 		getShapes().add(new DrawableCircle(Circle.createCircle(protectTarget, 50), Color.ORANGE).setFill(true));
@@ -188,14 +311,14 @@ public class BallDribbleToPosCalc extends ACalculator
 
 	private boolean isPointInvalid(IVector2 point, ICircle dribbleCircle)
 	{
-		if (!dribbleCircle.withMargin(-100).isPointInShape(point))
+		if (!dribbleCircle.withMargin(-140).isPointInShape(point))
 		{
 			return true;
 		}
 
-		return !Geometry.getField().isPointInShape(point)
-				|| Geometry.getPenaltyAreaTheir().withMargin(50).isPointInShape(point)
-				|| Geometry.getPenaltyAreaOur().withMargin(200).isPointInShape(point);
+		return !Geometry.getField().withMargin(-Geometry.getBotRadius() * 2).isPointInShape(point)
+				|| Geometry.getPenaltyAreaTheir().withMargin(50).isPointInShape(point) || Geometry.getPenaltyAreaOur()
+				.withMargin(200).isPointInShape(point);
 	}
 
 
@@ -230,10 +353,9 @@ public class BallDribbleToPosCalc extends ACalculator
 	{
 		List<IQuadrilateral> blockingQuads = opponents.stream()
 				.map(e -> getBlockingQuad(tigerBot, dribblingInformation.get().getDribblingCircle().radius(), dribbleCircle,
-						e))
-				.filter(Optional::isPresent)
-				.map(Optional::get).toList();
-		blockingQuads.forEach(e -> getShapes().add(new DrawableQuadrilateral(e, new Color(255, 0, 0, 25)).setFill(true)));
+						e)).filter(Optional::isPresent).map(Optional::get).toList();
+		blockingQuads.forEach(
+				e -> getShapes().add(new DrawableQuadrilateral(e, new Color(248, 0, 0, 128)).setFill(true)));
 		return blockingQuads;
 	}
 
@@ -242,8 +364,8 @@ public class BallDribbleToPosCalc extends ACalculator
 			ICircle dribbleCircle, ITrackedBot opponent)
 	{
 		var toOpponent = opponent.getPos().subtractNew(tigerBot.getPos());
-		var offset = toOpponent.getNormalVector().scaleToNew(Geometry.getBotRadius() * 2.0);
-		double distTowardsTiger = Math.min(Geometry.getBotRadius() * 3 + 10, toOpponent.getLength2());
+		var offset = toOpponent.getNormalVector().scaleToNew(Geometry.getBotRadius() * 1.5);
+		double distTowardsTiger = Math.min(Geometry.getBotRadius() * 2.5 + 20, toOpponent.getLength2() - 10);
 
 		var p1 = opponent.getPos().addNew(offset).addNew(toOpponent.scaleToNew(-distTowardsTiger));
 		var p2 = opponent.getPos().subtractNew(offset).addNew(toOpponent.scaleToNew(-distTowardsTiger));
@@ -251,32 +373,37 @@ public class BallDribbleToPosCalc extends ACalculator
 		var base1 = opponent.getPos().addNew(offset.multiplyNew(2));
 		var toBase1 = base1.subtractNew(tigerBot.getPos().addNew(offset));
 		var intersections = Circle.createCircle(dribbleCircle.center(), dribblingCircleRadius * 2.0)
-				.intersectPerimeterPath(Lines.halfLineFromDirection(
-						base1, toBase1.scaleToNew(dribblingCircleRadius * 4.2)));
+				.intersectPerimeterPath(
+						Lines.halfLineFromDirection(base1, toBase1.scaleToNew(dribblingCircleRadius * 4.2)));
 		if (intersections.size() != 1)
 		{
 			return Optional.empty();
 		}
-		var p3 = intersections.get(0);
+		var p3 = intersections.getFirst();
 
 		var base2 = opponent.getPos().addNew(offset.multiplyNew(-2));
 		var toBase2 = base2.subtractNew(tigerBot.getPos().subtractNew(offset));
-		intersections = Circle.createCircle(dribbleCircle.center(), dribblingCircleRadius * 2.0)
-				.intersectPerimeterPath(Lines.halfLineFromDirection(
-						base2, toBase2.scaleToNew(dribblingCircleRadius * 4.2)));
+		intersections = Circle.createCircle(dribbleCircle.center(), dribblingCircleRadius * 2.0).intersectPerimeterPath(
+				Lines.halfLineFromDirection(base2, toBase2.scaleToNew(dribblingCircleRadius * 4.2)));
 		if (intersections.size() != 1)
 		{
 			return Optional.empty();
 		}
-		var p4 = intersections.get(0);
+		var p4 = intersections.getFirst();
 
 		var quad = Quadrilateral.fromCorners(p1, p2, p3, p4);
 		return Optional.of(quad);
 	}
 
 
+	private List<IDrawableShape> getShapesProtectKick()
+	{
+		return getAiFrame().getShapes(EAiShapesLayer.OFFENSE_PROTECT_KICK);
+	}
+
+
 	private List<IDrawableShape> getShapes()
 	{
-		return getAiFrame().getShapes(EAiShapesLayer.OFFENSIVE_DRIBBLE);
+		return getAiFrame().getShapes(EAiShapesLayer.OFFENSE_DRIBBLE);
 	}
 }
